# kaggle_house_prices

./: .env  .gitignore  pyproject.toml
eda/: basement_eda.ipynb  house_exterior_eda.ipynb  house_general_eda.ipynb  house_rooms_eda.ipynb  main_eda.ipynb
eda/.ipynb_checkpoints/: house_general_eda-checkpoint.ipynb  main_eda-checkpoint.ipynb
notes/: results.txt
src/: config.py  mlflow_utils.py  optimization.py  plotting_utils.py  preprocessing.py  scores.py  test.py  train.py
